2007.Nov.26 (svn.debian.org/tux4kids - revision 350)
  Options:
	
      * Reworked the user login to make it more robust and
	user-friendly.  This version should be pretty generally usable.
	
      Tim Holy <holy@wustl.edu>

2007.Nov.26 (svn.debian.org/tux4kids - revision 342)
  Options:
      * Added support for user login. This should be helpful in school
	settings where all students log in with the same username.  See
	the README for details.

      Tim Holy <holy@wustl.edu>
	
2007.Nov.18 (svn.debian.org/tux4kids - revision 327)

  Build:
      * Changed name of "docs" to more standard "doc";
      fixed doc/Makefile.am so that files go under 
      "$(prefix)/share/doc/" rather than "$(prefix)/doc/"

      David Bruce <dbruce@tampabay.rr.com>

2007.Nov.15 (svn.debian.org/tux4kids - revision 322)
Version 1.5.8
  i18n:
      * Added Dutch po file - contributed by:
       Luc Schrijvers <Begasus@skynet.be>

  Build:
      * Started work on gettext for Windows - removed
      #ifdef WIN32 statements, program builds and runs
      without errors but the crossbuild doesn't yet include
      the .mo translation files.

      David Bruce <dbruce@tampabay.rr.com>

2007.Nov.15 (svn.debian.org/tux4kids - revision 320)
  Graphics:
      * Added a new function "Blend" to composite two images with transparency
  Game:
      * Use Blend to smooth out the animation of the rebuilding igloos
	
      Tim Holy <holy@pcg.wustl.edu>

	
2007.Nov.11 (svn.debian.org/tux4kids - revision 319)
Version 1.5.8
  i18n:
      * Added Czech po file - contributed by:
      Jaroslav Krejčí <krejci@zstenis.com>

  Graphics:
      * Minor tweak of "janitor penguin" sprite files to tone down glare
      David Bruce <dbruce@tampabay.rr.com>

2007.Nov.11 (svn.debian.org/tux4kids - revision 316)

  Build:
      * Gettext again works properly, AFAICT (was broken in 1.5.6 and 1.5.7). Much 
        thanks to Gettext maintainer Bruno Haible for helpful correspondence! The intl